# times-square

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  alembic.ini  docker-compose.yaml  noxfile.py  pyproject.toml  ruff-shared.toml  setup.cfg  tox.ini
.claude/: .gitignore
.claude/skills/project-mechanics/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/stoker/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/prompts/: update-dependencies.prompt.md  uv-version-sync.prompt.md
.github/workflows/: ci.yaml  dependencies.yaml  periodic-ci.yaml
.stoker/: settings.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20250110_2121_487195933fee_initial_schema.py  20250114_1620_2a3bb5a5933b_adopt_text_column_types_where_useful.py  20250509_2120_c617718eaf6b_add_execution_timeout_column.py  20250526_1905_e5d1578b4813_add_schedule_rruleset_columns.py  20250530_1909_747a655bacf6_add_scheduled_run_table.py
changelog.d/: 20230721_105914_jsick_DM_40142.md  20230725_153300_jsick_DM_40187.md  20230727_162527_jsick_DM_40188.md  20230731_162220_jsick_DM_40250.md  20230921_133245_jsick_DM_40865.md  20240306_111612_jsick_DM_43173.md  20240312_181835_jsick_DM_43264.md  20240830_164744_jsick_DM_46065.md  20240904_102527_jsick_DM_46095.md  20240906_161257_jsick_DM_46137.md  20250106_164329_jsick_DM_48307.md  20250110_170830_jsick_DM_48385.md  20250114_114726_jsick_DM_48413.md  20250122_113512_danfuchs_yolo_sentry.md  20250204_171720_danfuchs_idfprod.md  20250225_132628_jsick_DM_48924.md  20250226_172717_jsick_DM_48924_cache_migration.md  20250303_135229_jsick_DM_48923.md  20250506_165751_jsick_DM_46313.md  20250521_094300_jsick_DM_51015.md  20250522_135531_jsick_DM_51015.md  20250526_122743_jsick_DM_51083.md  20250530_113639_jsick_DM_51083.md  20250605_161046_jsick_DM_51103.md  20250611_121938_jsick_DM_51345.md  20250714_111008_jsick_maintenance.md  20251022_171958_athornton_DM_52819.md  20260423_175430_jsick_org_rename.md  20260703_120000_jsick_DM_55383.md  20260703_140000_jsick_DM_55383.md  20260706_111147_jonathan_DM_55384.md  20260706_140000_jsick_tickets_DM_53206_params_cell.md  20260710_000000_DM-55466.md  20260710_000000_DM_55470.md  20260710_000000_jsick_DM_55466.md  20260710_000000_reserve_ts_prefix.md  20260710_000001_DM-55466.md  20260710_000001_DM_55470_sse.md  20260710_000100_DM_55470_checkrun.md  20260710_000100_DM_55470_worker.md  (+1 more)
docs/: _rst_epilog.rst  conf.py  documenteer.toml  index.rst
docs/_static/: openapi.json
docs/dev/: development.rst  release.rst
docs/user-guide/: _github-app-url-org.txt  _github-app-url-personal.txt  environment-variables.rst  github-app-config.rst  index.rst  notebook-parameters.rst
requirements/: dev.in  dev.txt  main.in  main.txt  tox.in  tox.txt
scripts/: install-base-packages.sh  start-api.sh  update-uv-version.sh
src/timessquare/: __init__.py  cli.py  config.py  database.py  description.md  exceptions.py  factory.py  main.py  models.py  sentry.py
src/timessquare/dbschema/: __init__.py  base.py  page.py  scheduledrun.py
src/timessquare/dependencies/: redis.py  requestcontext.py
src/timessquare/domain/: executionoutcome.py  github.py  githubapi.py  githubcheckout.py  githubcheckrun.py  githubtree.py  githubwebhook.py  moduleinlining.py  nbhtml.py  noteburst.py  noteburstjob.py  page.py  pageparameters.py  schedule.py  scheduledrun.py  schedulerule.py  ssemodels.py
src/timessquare/domain/pageparameters/: __init__.py  _booleanparameter.py  _datedynamicdefault.py  _dateparameter.py  _datetimeparameter.py  _dayobsdateparameter.py  _dayobsparameter.py  _integerparameter.py  _numberparameter.py  _obsdateparameter.py  _pageparameters.py  _schemabase.py  _stringparameter.py
src/timessquare/handlers/: apitags.py  external.py  internal.py
src/timessquare/handlers/v1/: __init__.py  endpoints.py  handlers.py  models.py
src/timessquare/services/: backgroundpage.py  githubcheckrun.py  githubrepo.py  page.py  runscheduler.py
src/timessquare/services/github/: client.py  repo.py  webhooks.py
src/timessquare/storage/: nbexecutionfailurestore.py  nbhtmlcache.py  noteburst.py  noteburstjobstore.py  page.py  redisbase.py  redisutils.py  scheduledrunstore.py
src/timessquare/storage/github/: __init__.py  apimodels.py  retry.py  settingsfiles.py
src/timessquare/storage/github/settingsfiles/: __init__.py  _parameterschema.py  _person.py  _reposettings.py  _schedule.py  _sidecar.py
src/timessquare/worker/: main.py  servicefactory.py
src/timessquare/worker/functions/: __init__.py  cleanup_scheduled_runs.py  compute_check_run.py  create_check_run.py  create_rerequested_check_run.py  ping.py  pull_request_sync.py  replace_nbhtml.py  repo_added.py  repo_push.py  repo_removed.py  schedule_runs.py  scheduled_page_run.py
tests/: cli_test.py  conftest.py  factory_test.py  schema_test.py
tests/data/: demo-invalid-params.ipynb  demo.ipynb
tests/data/rsp_broadcast/: README.md  readme_blob.json  recursive_tree.json
tests/data/times-square-demo/: README.md  demo.yaml  recursive_tree.json  settings-blob.json  times-square.yaml
tests/domain/: executionoutcome_test.py  github_test.py  githubcheckout_test.py  githubcheckrun_test.py  githubtree_test.py  githubwebhook_test.py  moduleinlining_test.py  nbhtml_test.py  page.py  page_test.py  pageparameters_test.py  schedule_test.py
tests/handlers/: external_test.py  internal_test.py
tests/handlers/v1/: github_test.py  htmlstatus_test.py  index_test.py  pages_test.py
tests/services/: backgroundpage_test.py  githubcheckrun_test.py  page.py  page_test.py
tests/storage/github/: apimodels_test.py  retry_test.py  settingsfile_test.py
tests/support/: __init__.py  github.py
tests/worker/functions/: execution_failure_test.py
